animation ok, use effect ok

--- a/app.json
+++ b/app.json
@@ -21,6 +21,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "androidStatusBar":{
+      "barStyle": "light-content",
+      "backgroundColor": "#000"
     }
   }
 }
